<resources>
    <string name="app_name">Memoire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_title">Title</string>
    <string name="card_description">Description</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string-array name="options">
        <item> Camera </item>
        <item> Photo Gallery </item>
        <item> Video gallery </item>
        <item> Flickr </item>
    </string-array>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="create_new_media_card">Create new media card</string>
    <string name="choose_import_method">Choose import method:</string>
    <string name="enter_tag_here">Enter tag here</string>
    <string name="import_media">Import media</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create_card">Create card</string>
    <string name="create_theme">Create Theme</string>
    <string name="create_new_theme">Create new Theme</string>
    <string name="edit_media_card">Edit media card </string>
    <string name="edit_card">Edit card </string>
    <string name="edit_theme">Edit Theme </string>
    <string name="title">Title </string>
    <string name="date">Date </string>
    <string name="image">Image </string>
    <string name="video">Video </string>
    <string name="sort_ascending">Sort newest first </string>
    <string name="sort_descending">Sort oldest first </string>













</resources>
